# happy-birthday-batch

./: .env.example  .gitattributes  .gitignore  AFTER_EFFECTS_WORKFLOW.md  HOW_TO_USE.md  README.md  SETUP.md  __init__.py  __main__.py  acestep_env.py  acestep_env_test.py  acestep_task.py  ae_batch_cli.py  ae_config.py  ae_headless.py  ae_launcher.py  ae_render_job.py  ae_runner.py  ae_video_metadata.py  ae_video_variation.py  ae_video_variation_test.py  ai_music_detector.py  ai_stealth.py  ai_stealth_test.py  api_client.py  audio_edit.py  audio_forensics.py  audio_forensics_test.py  audio_merge.py  audio_qc.py  batch_variation.py  batch_variation_test.py  brand.py  brand_test.py  chinese_party_lyrics.py  cli_entry.py  countdown_reference.py  cover_generator.py  create_reference_melody.py  deliver_cli.py  (+44 more)
ae_scripts/: ae_common.jsx  inspect_project.jsx  render_job.jsx
ae_template/: Happy birthday.aep  README.md
ae_template/assets/: Loop04.mov  Snow.mov  Sparks.mov  Star Bang.mov
input/: indian_names.txt  names.csv  world_names.csv
lyrics/: verse1_template.txt
output/sarah-birthday-edm-party/: sarah-birthday-edm-party.json
output/suhani-birthday-edm-party/: suhani-birthday-edm-party.json  suhani-birthday-edm-party.youtube.json
scripts/: batch.cmd  batch.sh  publish_personal.sh  setup_macos.sh  setup_windows.ps1  start_acestep_api.bat  start_acestep_api.sh
state/: release_status.csv
templates/presets/: sarah-birthday-edm-party-v6-restore.json
website/: about.html  index.html
website/css/: style.css
